# stm32_prj_tmpl

./: .gitignore  .justfile  README.md  openocd.cfg
.zed/: settings.json  tasks.json
cmake/user/: CMakeLists.txt
